--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "FreeCom"
-version = "0.1.3"
-description = "FreeCom is a module for reading & evaluating export files from the Freelance control system."
+name = "FreelanceAPI"
+version = "0.1.0"
+description = "FreelanceAPI is a module for reading & evaluating export files from the Freelance control system."
 
 license = "GNU"
 
@@ -9,14 +9,15 @@ authors = ["Peter Schwarz <p.schwarz1994@outlook.de>"]
 
 readme = 'README.rst' 
 
-repository = "https://github.com/DarkJumper/FreeCom"
-homepage = "https://github.com/DarkJumper/FreeCom"
+repository = "https://github.com/DarkJumper/FreelanceAPI"
+homepage = "https://github.com/DarkJumper/FreelanceAPI"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+yapf = "^0.31.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
