--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "FreelanceAPI"
-version = "0.1.0"
+version = "0.1.1"
 description = "FreelanceAPI is a module for reading & evaluating export files from the Freelance control system."
 
 license = "GNU"
 
 authors = ["Peter Schwarz <p.schwarz1994@outlook.de>"]
 
-readme = 'README.rst' 
+readme = 'README.md' 
 
 repository = "https://github.com/DarkJumper/FreelanceAPI"
 homepage = "https://github.com/DarkJumper/FreelanceAPI"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
