--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -27,4 +27,4 @@ jobs:
       run: |
         poetry version $(git describe --tags --abbrev=0)
         poetry build
-        poetry publish --username ${{ __token__ }} --password ${{ secrets.PYPI_TOKEN }}
+        poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PW }}
