--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -16,12 +16,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: [3.9,3.10.0]
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
     - name: Build and publish
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
       run: |
         poetry version $(git describe --tags --abbrev=0)
         poetry build
