--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ homepage = "https://github.com/DarkJumper/FreelanceAPI"
 
 [tool.poetry.dependencies]
 python = "^3.10.0"
+pydantic = "^1.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
