--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.10.0]
+        python-version: ["3.10.0","3.11.0"]
 
     steps:
     - uses: actions/checkout@v2
